--- a/portal/css/main.css
+++ b/portal/css/main.css
@@ -530,6 +530,7 @@ header.headerfix .header_top,
 }
 .sec3 .inner > .tab_group > .tab_btn > ul > li.on > a {
     background: url(../images/bg/main_sec02_tab_bg_on.png) no-repeat bottom center;
+    background-size: 100%;
 }
 .sec3 .inner > .tab_group > .tab_btn > ul > li.on > a::after {
     content: "";
@@ -546,6 +547,26 @@ header.headerfix .header_top,
 .sec3 .inner > .tab_group > .tab_btn > ul > li > a .tit {
     display: flex;
     flex-direction: column;
+    align-items: flex-end;
+}
+.sec3 .inner > .tab_group > .tab_btn > ul > li > a .tit strong {
+    font-size: 27px;
+    font-weight: 700;
+}
+.sec3 .inner > .tab_group > .tab_btn > ul > li > a .tit span {
+    font-size: 24px;
+    font-weight: 800;
+}
+.sec3 .inner > .tab_group > .tab_btn > ul > li > a .tit span em {
+    margin-left: 5px;
+    font-size: 18px;
+    font-weight: 500;
+    font-style: normal;
+}
+.sec3 .inner > .tab_group > .tab_btn > ul > li.on > a .tit strong,
+.sec3 .inner > .tab_group > .tab_btn > ul > li.on > a .tit span,
+.sec3 .inner > .tab_group > .tab_btn > ul > li.on > a .tit span em {
+    color: #a9e1fe;
 }
 .sec3 .inner > .tab_group > .tab_btn > ul > li > a > span {
     display: block;
@@ -854,11 +875,13 @@ header.headerfix .header_top,
 .sec4 .inner .board_group li dl dd .img {
     display: flex;
     align-items: flex-start;
+    justify-content: center;
     width: 100%;
     height: 160px;
 }
 .sec4 .inner .board_group li dl dd .img img {
     width: 100%;
+    height: 100%;
 }
 .sec4 .inner .board_group li.type_05 dl dd {
     flex-direction: row;
@@ -866,10 +889,17 @@ header.headerfix .header_top,
 }
 .sec4 .inner .board_group li.type_05 dl dd .img,
 .sec4 .inner .board_group li.type_06 dl dd .img {
+    display: flex;
+    justify-content: center;
     overflow: hidden;
     width: 50%;
     height: 100%;
     border-radius: 40px 0 0 0;
+}
+.sec4 .inner .board_group li.type_05 dl dd .img img,
+.sec4 .inner .board_group li.type_06 dl dd .img img {
+    width: 100%;
+    height: 100%;
 }
 .sec4 .inner .board_group li.type_06 dl dd .img {
     border-radius: 0 40px 0 0;
@@ -877,6 +907,268 @@ header.headerfix .header_top,
 .sec4 .inner .board_group li.type_06 dl dd {
     flex-direction: row-reverse;
     justify-content: space-between;
+}
+
+/* section5 */
+.sec5 .inner {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.sec5_wrap {
+    position: relative;
+}
+.sec5 .sec5_wrap h2 {
+    font-size: 45px;
+    font-weight: 700;
+}
+.sec5 .sec5_wrap > .tab_group > .tab_btn {
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+.sec5 .sec5_wrap > .tab_group > .tab_btn ul {
+    border-bottom: none;
+    gap: 30px;
+}
+.sec5 .sec5_wrap > .tab_group > .tab_btn ul li {
+    flex: none;
+}
+.sec5 .sec5_wrap > .tab_group > .tab_btn ul li a {
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    padding: 20px 0;
+    align-items: center;
+    width: 220px;
+    border-radius: 20px;
+    box-shadow: 2px 2px 10px 2px rgb(0 0 0 / 14%);
+}
+.sec5 .sec5_wrap > .tab_group > .tab_btn ul li.on a {
+    border: none;
+    background-color: #515eab;
+}
+.sec5 .sec5_wrap > .tab_group > .tab_btn ul li.on a::after {
+    content: "";
+    display: flex;
+    position: absolute;
+    bottom: -15px;
+    left: 50%;
+    width: 30px;
+    height: 30px;
+    margin-left: -15px;
+    background-color: #515eab;
+    transform: rotate(45deg);
+}
+.sec5 .sec5_wrap > .tab_group > .tab_btn ul li a span {
+    display: flex;
+    width: 85px;
+    height: 85px;
+    background: no-repeat center;
+    background-size: 100%;
+    margin-bottom: 10px;
+}
+.sec5 .sec5_wrap > .tab_group > .tab_btn ul li:nth-child(1) a span {
+    background-image: url(../images/ico/ico_main_sec05_tab_01_off.png);
+}
+.sec5 .sec5_wrap > .tab_group > .tab_btn ul li:nth-child(1).on a span {
+    background-image: url(../images/ico/ico_main_sec05_tab_01_on.png);
+}
+.sec5 .sec5_wrap > .tab_group > .tab_btn ul li:nth-child(2) a span {
+    background-image: url(../images/ico/ico_main_sec05_tab_02_off.png);
+}
+.sec5 .sec5_wrap > .tab_group > .tab_btn ul li:nth-child(2).on a span {
+    background-image: url(../images/ico/ico_main_sec05_tab_02_on.png);
+}
+.sec5 .sec5_wrap > .tab_group > .tab_btn ul li a em,
+.sec5 .sec5_wrap > .tab_group > .tab_btn ul li a strong {
+    font-style: normal;
+    font-size: 20px;
+    font-weight: 500;
+}
+.sec5 .sec5_wrap > .tab_group > .tab_btn ul li.on a * {
+    color: #fff;
+}
+.sec5 .sec5_wrap > .tab_group > .tab_content {
+    padding-top: 140px;
+}
+.sec5 .sec5_wrap .tab_group .tab_group .tab_btn > ul {
+    border-bottom: 3px solid #e8e8e8;
+}
+.sec5 .sec5_wrap .tab_group .tab_group .tab_btn > ul > li > a {
+    padding: 20px 0;
+    margin-bottom: -5px;
+}
+.sec5 .sec5_wrap .tab_group .tab_group .tab_btn > ul > li.on > a {
+    border-bottom: 7px solid #6666cc;
+}
+
+
+.tbl_main_table {
+    display: flex;
+    flex-direction: column;
+}
+.tbl_main_table > span {
+    display: flex;
+    justify-content: flex-end;
+    margin-bottom: 15px;
+    font-size: 14px;
+    color: #757575;
+}
+.tbl_main_table ul {
+    display: flex;
+    flex-direction: column;
+    border-top: 1px solid #333;
+}
+.tbl_main_table ul li {
+    display: flex;
+    padding: 20px 0;
+    border-bottom: 1px solid #d8d7d7;
+}
+.tbl_main_table ul li > div {
+    display: flex;
+    align-items: center;
+    width: 20%;
+    padding: 0 30px;
+    box-sizing: border-box;
+}
+.tbl_main_table ul li > div:nth-child(2) {
+    width: 40%;
+}
+.tbl_main_table ul li > div div {
+    width: 100%;
+}
+.tbl_main_table ul li .date {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding-left: 50px;
+}
+.tbl_main_table ul li .date span {
+    font-size: 12px;
+}
+.tbl_main_table ul li .date strong {
+    font-size: 36px;
+    font-weight: 600;
+}
+.tbl_main_table .btn_box {
+    width: auto;
+    justify-content: flex-end;
+    margin-top: 50px;
+}
+.tbl_main_table .btn_box a {
+    display: flex;
+    flex: none;
+    justify-content: flex-end;
+    align-items: center;
+    width: auto;
+    padding: 0;
+    font-size: 20px;
+    font-weight: 700;
+    color: #333;
+}
+.tbl_main_table .btn_box a::after {
+    content: "";
+    display: block;
+    width: 91px;
+    height: 15px;
+    background: url(../images/ico/ico_longarrow_right.png) no-repeat center;
+    margin-left: 10px;
+}
+
+/* footer banner */
+.main_ban_swiper_wrap {
+    background-color: #fff;
+    margin: -30px 0 35px;
+    padding: 30px 0;
+    box-sizing: border-box;
+    border-top: 1px solid #e4e4e4;
+}
+.main_ban_swiper_wrap .main_ban_swiper {
+    display: flex;
+    justify-content: flex-end;
+    position: relative;
+    width: 1300px;
+    margin: 0 auto;
+    overflow: hidden;
+}
+.main_ban_swiper_wrap .main_ban_swiper h3 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 90px;
+    height: 100%;
+    background-color: #fff;
+    font-family: 'GmarketSans';
+    font-size: 19px;
+    font-weight: 500;
+    color: #333;
+    z-index: 3;
+}
+.main_ban_swiper_wrap .main_ban_swiper h3::before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 230px;
+    height: 100%;
+    background-color: #fff;
+    z-index: -1;
+}
+.swiper-button-prev.main_ban,
+.swiper-button-next.main_ban {
+    width: 40px;
+    height: 40px;
+    border-radius: 10px;
+    background-color: #efefef;
+}
+.swiper-button-prev.main_ban {
+    left: 90px;
+}
+.swiper-button-next.main_ban {
+    right: inherit;
+    left: calc(90px + 40px + 40px + 5px + 5px)
+}
+.swiper-button-prev.main_ban:after,
+.swiper-button-next.main_ban:after {
+    font-size: 13px;
+    font-weight: 600;
+    color: #333;
+}
+.main_ban_swiper .swiper-wrapper {
+    width: calc(100% - 245px);
+    align-items: center;
+}
+.main_ban_swiper .swiper-wrapper .swiper-slide {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.main_ban_swiper .btn_pause,
+.main_ban_swiper .btn_start {
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: calc(90px + 40px + 5px);
+    width: 40px;
+    height: 40px;
+    border-radius: 10px;
+    background: #efefef no-repeat center;
+    text-indent: -9999px;
+    transform: translateY(-54%);
+    cursor: pointer;
+    z-index: 3;
+}
+.main_ban_swiper .btn_pause {
+    background-image: url(../images/ico/ico_ban_stop.png);
+}
+.main_ban_swiper .btn_start {
+    display: none;
+    background-image: url(../images/ico/ico_ban_start.png);
 }
 
 /* ============================================================
@@ -893,12 +1185,26 @@ header.headerfix .header_top,
     .section_wrap .inner {
         max-width: 75%;
     }
+
+    /* section3 */
+    .sec3 .inner > .tab_group > .tab_btn > ul > li > a {
+        padding: 40px 20px;
+    }
 }
 
 /* ============================================================
     미디어쿼리 max-width: 1300px
 ============================================================ */
 @media screen and (max-width: 1300px) {
+    .swiper-container .slide_wrap {
+        padding-top: 170px;
+    }
+    .swiper-container .swiper-pagination.sec1_full {
+        top: 120px;
+    }
+    .swiper-container > .swiper-wrapper > .swiper-slide {
+        height: 100vh;
+    }
     .swiper-container .slide_wrap .inner .sub_tit {
         font-size: 19px;
     }
@@ -909,7 +1215,7 @@ header.headerfix .header_top,
         font-size: 50px;
     }
     .swiper-container .slide_wrap .inner .total {
-        gap: 50px 20px;
+        gap: 30px 20px;
         justify-content: space-between;
     }
     .swiper-container .slide_wrap .inner .total li {
@@ -924,6 +1230,9 @@ header.headerfix .header_top,
     }
     .swiper-container .slide_wrap .inner .total li .total_content span {
         font-size: 18px;
+    }
+    .shortcuts_box {
+        margin-bottom: 20px;
     }
     .shortcuts_box .swiper-wrapper .swiper-slide {
         max-width: 130px;
@@ -950,6 +1259,77 @@ header.headerfix .header_top,
     .shortcuts_box .swiper-wrapper .swiper-slide a em br {
         display: none;
     }
+
+
+    /* section2 */
+    .section_wrap .inner {
+        padding: 0;
+    }
+    .sec2 .search_word dl {
+        padding: 15px 30px;
+    }
+    .sec2 .search_word dl dt {
+        padding: 15px;
+        font-size: 22px;
+    }
+    .sec2 .search_word dl dd {
+        padding: 15px;
+    }
+    .sec2 .search_word dl dd ol {
+        gap: 15px;
+    }
+    .sec2 .search_word dl dd ol li a {
+        font-size: 16px;
+    }
+    .sec2 .search_word dl dd ul {
+        gap: 15px;
+    }
+    .sec2 .search_word dl dd ul li a {
+        font-size: 16px;
+    }
+
+    /* section3 */
+    .sec3 .inner > .tab_group > .tab_btn {
+        padding: 0;
+    }
+    .sec3 .inner > .tab_group > .tab_btn > ul > li > a {
+        padding: 30px 10px;
+    }
+    .sec3 .inner > .tab_group > .tab_content .total_chart .total ul li {
+        padding: 15px 20px;
+    }
+    .sec3 .inner > .tab_group > .tab_content .total_chart .total ul li .total_tit {
+        font-size: 16px;
+    }
+    .sec3 .inner > .tab_group > .tab_content .total_chart .total .total_content strong {
+        font-size: 30px;
+    }
+    .sec3 .inner > .tab_group > .tab_content .total_chart .total .total_content span {
+        font-size: 16px;
+    }
+    .sec3 .inner > .tab_group > .tab_content .total_chart .chart_group .tit strong {
+        font-size: 18px;
+    }
+
+    /* section4 */
+    .sec4 .inner {
+        padding-bottom: 50px;
+    }
+
+    /* section5 */
+    .tbl_main_table ul li > div {
+        padding: 0 15px;
+    }
+
+
+    /* footer banner */
+    .main_ban_swiper_wrap .main_ban_swiper {
+        width: 73%;
+    }
+    .main_ban_swiper .swiper-wrapper .swiper-slide a img {
+        width: 100%;
+    }
+
 }
 
 /* ============================================================
@@ -963,6 +1343,11 @@ header.headerfix .header_top,
 ============================================================ */
 
 @media screen and (max-width: 768px) {
+    /* header */
+    .main header.headerfix .header_top {
+        background-color: rgba(255, 255, 255, .6);
+        backdrop-filter: blur(10px);
+    }
     .fullpage-wrapper {
         scroll-snap-type: y mandatory;
     }
@@ -1142,7 +1527,271 @@ header.headerfix .header_top,
     }
     
     /* 공통 */
+    .section_wrap {
+        padding-top: 126px;
+    }
     .section_wrap .inner {
         max-width: 100%;
+        padding: 0 20px;
     }
+
+    /* section2 */
+    .sec2 {
+        background-size: auto 50%;
+    }
+    .sec2 .inner {
+        padding-bottom: 120px;
+    }
+    .sec2 h2 {
+        font-size: 30px;
+    }
+    .sec2 .search_box .inp_group {
+        gap: 10px;
+        justify-content: space-between;
+    }
+    .sec2 .search_box .inp_box {
+        width: calc(100% - 90px);
+    }
+    .sec2 .search_box .inp_box input {
+        padding: 15px 20px;
+        font-size: 17px;
+    }
+    .sec2 .search_box .box_btn {
+        width: 80px;
+    }
+    .sec2 .search_box .box_btn > * {
+        font-size: 17px;
+    }
+    .sec2 .search_word {
+        flex-direction: column;
+    }
+    .sec2 .search_word dl {
+        width: 100%;
+        padding: 15px;
+        border-radius: 10px 45px;
+    }
+    .sec2 .search_word dl dd ol li a {
+        font-size: 15px;
+    }
+    .sec2 .search_word dl dd ul li a {
+        padding: 5px 15px;
+        font-size: 15px;
+    }
+
+    /* section3 */
+    .sec3 .inner > .tab_group > .tab_btn {
+        height: auto;
+        border-bottom: none;
+    }
+    .sec3 .inner > .tab_group > .tab_btn > ul {
+        overflow: inherit;
+        gap: 5px;
+    }
+    .sec3 .inner > .tab_group > .tab_btn > ul > li {
+        flex: 1;
+    }
+    .sec3 .inner > .tab_group > .tab_btn > ul > li > a {
+        padding: 15px 5px;
+    }
+    .sec3 .inner > .tab_group > .tab_btn > ul > li > a > span {
+        width: 25px;
+        height: 27px;
+    }
+    .sec3 .inner > .tab_group > .tab_btn > ul > li.on > a::after {
+        bottom: -12px;
+        width: 33px;
+        height: 13px;
+    }
+    .sec3 .inner > .tab_group > .tab_btn > ul > li > a .tit {
+        padding-left: 5px;
+    }
+    .sec3 .inner > .tab_group > .tab_btn > ul > li > a .tit strong {
+        font-size: 12px;
+    }
+    .sec3 .inner > .tab_group > .tab_btn > ul > li > a .tit span {
+        font-size: 12px;
+    }
+    .sec3 .inner > .tab_group > .tab_btn > ul > li > a .tit span em {
+        font-size: 12px;
+    }
+    .sec3 .inner > .tab_group > .tab_content .total_chart {
+        gap: 15px;
+        flex-direction: column;
+    }
+    .sec3 .inner > .tab_group > .tab_content .total_chart .total ul li {
+        padding: 10px;
+    }
+    .sec3 .tab_content .total li .total_tit::before {
+        width: 28px;
+        height: 28px
+    }
+    .sec3 .inner > .tab_group > .tab_content .total_chart .total {
+        gap: 5px;
+    }
+    .sec3 .inner > .tab_group > .tab_content .total_chart .total ul {
+        gap: 10px;
+    }
+    .sec3 .inner > .tab_group > .tab_content .total_chart .total ul li .total_tit {
+        font-size: 14px;
+    }
+    .sec3 .inner > .tab_group > .tab_content .total_chart .total .total_content strong {
+        font-size: 23px;
+    }
+    .sec3 .inner > .tab_group > .tab_content .total_chart .total .total_content span {
+        margin-left: 0;
+        font-size: 14px;
+    }
+    .sec3 .inner > .tab_group > .tab_content .total_chart .total > span {
+        font-size: 14px;
+    }
+
+    /* section4 */
+    .sec4 .inner {
+        flex-direction: column;
+        padding-bottom: 30px;
+    }
+    .sec4 .inner .board_group {
+        width: 100%;
+    }
+    .sec4 .inner .board_group li.type_01,
+    .sec4 .inner .board_group li.type_02,
+    .sec4 .inner .board_group li.type_03,
+    .sec4 .inner .board_group li.type_04,
+    .sec4 .inner .board_group li.type_05,
+    .sec4 .inner .board_group li.type_06 {
+        height: auto;
+    }
+    .sec4 .inner .board_group:nth-child(3) {
+        width: 100%;
+    }
+    .sec4 .inner .board_group:nth-child(3) li.type_04 {
+        flex-wrap: wrap;
+    }
+    .sec4 .inner .board_group:nth-child(3) li.type_04 dl {
+        width: 100%;
+        height: auto;
+    }
+    .sec4 .inner .board_group li.type_06 dl dd .img {
+        height: auto;
+    }
+    .sec4 .inner .board_group li dl dd .txt {
+        gap: 10px;
+        padding: 0 15px 15px;
+    }
+    .sec4 .inner .board_group li dl dd a strong {
+        font-size: 18px;
+    }
+
+    /* section5 */
+    .sec5 .sec5_wrap > .tab_group {
+        margin-top: 20px;
+    }
+    .sec5 .sec5_wrap > .tab_group > .tab_btn {
+        position: inherit;
+        height: auto;
+        border-bottom: none;
+    }
+    .sec5 .sec5_wrap > .tab_group > .tab_btn ul {
+        overflow: inherit;
+        gap: 20px;
+        padding: 5px 5px 15px 5px;
+    }
+    .sec5 .sec5_wrap > .tab_group > .tab_btn ul li {
+        flex: 1;
+        width: calc(50% - 10px);
+    }
+    .sec5 .sec5_wrap > .tab_group > .tab_btn ul li a {
+        width: 100%;
+    }
+    .sec5 .sec5_wrap > .tab_group > .tab_btn ul li.on a::after {
+        bottom: -7px;
+        width: 15px;
+        height: 15px;
+        margin-left: -7px;
+    }
+    .sec5 .sec5_wrap > .tab_group > .tab_btn ul li a em,
+    .sec5 .sec5_wrap > .tab_group > .tab_btn ul li a strong {
+        font-size: 15px;
+    }
+    .sec5 .sec5_wrap > .tab_group > .tab_content {
+        padding-top: 0;
+    }
+    .sec5 .sec5_wrap .tab_group .tab_group .tab_btn {
+        height: auto;
+        border-bottom: none;
+    }
+    .sec5 .sec5_wrap .tab_group .tab_group .tab_btn > ul {
+        overflow: visible;
+        height: auto;
+        padding-bottom: 0;
+        gap: 10px;
+    }
+    .sec5 .sec5_wrap .tab_group .tab_group .tab_btn > ul > li {
+        flex: 1;
+    }
+    .sec5 .sec5_wrap .tab_group .tab_group .tab_btn > ul > li > a {
+        padding: 15px 0;
+        margin-bottom: -4px;
+    }
+    .sec5 .sec5_wrap .tab_group .tab_group .tab_btn > ul > li.on > a {
+        border-bottom: 4px solid #6666cc;
+    }
+    .sec5 .sec5_wrap > .tab_group > .tab_btn ul li a span {
+        width: 50px;
+        height: 50px;
+    }
+    .tbl_main_table > span {
+        margin-bottom: 5px;
+    }
+    .tbl_main_table ul li {
+        padding: 15px 0;
+    }
+    .tbl_main_table ul li > div {
+        padding: 0 5px;
+        justify-content: center;
+        width: 25%;
+        font-size: 12px;
+    }
+    .tbl_main_table ul li > div:nth-child(2) {
+        width: 20%;
+    }
+    .tbl_main_table ul li > div:nth-child(2) {
+        display: flex;
+        flex-direction: column;
+        width: 35%;
+    }
+    .tbl_main_table ul li > div:nth-child(3) {
+        width: 10%;
+    }
+    .tbl_main_table ul li > div:nth-child(4) {
+        width: 35%;
+        justify-content: flex-start;
+    }
+    .tbl_main_table ul li .date {
+        padding: 0 5px;
+        align-items: center;
+    }
+    .tbl_main_table ul li .date strong {
+        font-size: 24px;
+    }
+    .tbl_main_table ul li .date span {
+        font-size: 10px;
+    }
+    .tbl_main_table .btn_box {
+        margin-top: 20px;
+    }
+    .tbl_main_table .btn_box a {
+        font-size: 15px;
+    }
+    .tbl_main_table .btn_box a::after {
+        width: 50px;
+        background-position: right;
+    }
+
+    /* footer banner */
+    .main_ban_swiper_wrap {
+        display: none;
+    }
+
+
 }
