--- a/portal/css/common.css
+++ b/portal/css/common.css
@@ -557,6 +557,9 @@
     color: #fff;
     cursor: pointer;
 }
+.inp_group.file .inp_box {
+    width: 100%;
+}
 .inp_group.address {
     flex-direction: column;
     align-items: flex-start;
