--- a/portal/css/common.css
+++ b/portal/css/common.css
@@ -443,14 +443,14 @@
     top: 0;
     left: -9999px;
 }
-.chk_box input + label {
+.chk_box input ~ label {
     display: flex;
     position: relative;
     padding-left: 25px;
     font-size: 15px;
     cursor: pointer;
 }
-.chk_box input + label::before {
+.chk_box input ~ label::before {
     content: "";
     display: block;
     position: absolute;
@@ -464,7 +464,7 @@
     background-color: #fff;
     transition: .2s;
 }
-.chk_box input + label::after {
+.chk_box input ~ label::after {
     content: "";
     display: block;
     position: absolute;
@@ -477,20 +477,20 @@
     transform: rotate(45deg) scale(0);
     transition: .2s;
 }
-.chk_box input:checked + label::before {
+.chk_box input:checked ~ label::before {
     border-color: #457cd7;
     background-color: #457cd7;
 }
-.chk_box input:checked + label::after {
+.chk_box input:checked ~ label::after {
     transform: rotate(45deg) scale(1);
 }
-.chk_box input.checked + label::before {
+.chk_box input.checked ~ label::before {
     background-color: #f5f5f5;
 }
-.chk_box input:disabled + label::before {
+.chk_box input:disabled ~ label::before {
     background-color: #eee;
 }
-.chk_box input.checked + label::after {
+.chk_box input.checked ~ label::after {
     border-color: #bdbdbd;
     transform: rotate(45deg) scale(1);
 }
@@ -2198,7 +2198,7 @@ a.ui-button:active,
     }
 
     /* chk_box 라디오박스 */
-    .chk_box input + label {
+    .chk_box input ~ label {
         font-size: 14px;
     }
 
